kubernetes/manifests/monikey/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monikey
  namespace: monikey
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  ingressClassName: traefik
  rules:
    - host: monikey.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
